refactor: casas decimais

--- a/6_melhorando_modelo_rf.ipynb
+++ b/6_melhorando_modelo_rf.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOHi9+/14KW/L1JA9W0Vsfy",
+      "authorship_tag": "ABX9TyOUdqPnFpxcCNHp0hNrabda",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -744,17 +744,17 @@
         "  predito_kb = modelo_kb.predict(X_teste_kbest)\n",
         "\n",
         "  metricas = [count,\n",
-        "              (metrics.accuracy_score(y_teste, predito_kb) * 100),\n",
-        "              (metrics.precision_score(y_teste, predito_kb) * 100),\n",
-        "              (metrics.recall_score(y_teste, predito_kb) * 100),\n",
-        "              (metrics.f1_score(y_teste, predito_kb) * 100)]\n",
+        "              round((metrics.accuracy_score(y_teste, predito_kb) * 100), 2),\n",
+        "              round((metrics.precision_score(y_teste, predito_kb) * 100), 2),\n",
+        "              round((metrics.recall_score(y_teste, predito_kb) * 100), 2),\n",
+        "              round((metrics.f1_score(y_teste, predito_kb) * 100), 2)]\n",
         "\n",
         "  df_kbest.loc[count] = metricas\n"
       ],
       "metadata": {
         "id": "va6EAYNOmByu"
       },
-      "execution_count": 31,
+      "execution_count": 33,
       "outputs": []
     },
     {
@@ -763,45 +763,45 @@
         "df_kbest"
       ],
       "metadata": {
-        "id": "m_0S3QECpJ-x",
-        "outputId": "8b96d259-2b64-4da3-f193-39feaa1c5401",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 677
-        }
+        },
+        "id": "m_0S3QECpJ-x",
+        "outputId": "61ba8bca-55f3-48ab-9019-b07d11abdf18"
       },
-      "execution_count": 32,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "       K   Acurácia   Precisão     Recall         F1\n",
-              "1    1.0  95.878690  98.171994  93.498360  95.778197\n",
-              "2    2.0  99.255111  99.515976  98.991696  99.253144\n",
-              "3    3.0  99.497593  99.636135  99.358035  99.496891\n",
-              "4    4.0  99.645000  99.701357  99.588305  99.644799\n",
-              "5    5.0  99.690357  99.732868  99.647617  99.690224\n",
-              "6    6.0  99.717396  99.760799  99.673784  99.717273\n",
-              "7    7.0  99.720013  99.759074  99.680762  99.719903\n",
-              "8    8.0  99.726118  99.760841  99.691229  99.726023\n",
-              "9    9.0  99.721757  99.760820  99.682506  99.721648\n",
-              "10  10.0  99.712162  99.752086  99.672040  99.712047\n",
-              "11  11.0  99.725246  99.767787  99.682506  99.725128\n",
-              "12  12.0  99.730479  99.776501  99.684251  99.730355\n",
-              "13  13.0  99.737457  99.799137  99.675529  99.737295\n",
-              "14  14.0  99.740074  99.799148  99.680762  99.739920\n",
-              "15  15.0  99.745307  99.820050  99.670295  99.745116\n",
-              "16  16.0  99.747924  99.811357  99.684251  99.747763\n",
-              "17  17.0  99.744435  99.821787  99.666806  99.744237\n",
-              "18  18.0  99.735713  99.795651  99.675529  99.735554\n",
-              "19  19.0  99.747924  99.821800  99.673784  99.747737\n",
-              "20  20.0  99.754030  99.837492  99.670295  99.753824"
+              "       K  Acurácia  Precisão  Recall     F1\n",
+              "1    1.0     95.88     98.17   93.49  95.77\n",
+              "2    2.0     99.25     99.51   98.99  99.25\n",
+              "3    3.0     99.49     99.63   99.35  99.49\n",
+              "4    4.0     99.66     99.72   99.59  99.66\n",
+              "5    5.0     99.70     99.74   99.65  99.70\n",
+              "6    6.0     99.71     99.75   99.67  99.71\n",
+              "7    7.0     99.72     99.76   99.68  99.72\n",
+              "8    8.0     99.72     99.75   99.68  99.72\n",
+              "9    9.0     99.72     99.76   99.68  99.72\n",
+              "10  10.0     99.72     99.75   99.69  99.72\n",
+              "11  11.0     99.73     99.76   99.69  99.73\n",
+              "12  12.0     99.74     99.78   99.69  99.74\n",
+              "13  13.0     99.74     99.81   99.67  99.74\n",
+              "14  14.0     99.74     99.80   99.68  99.74\n",
+              "15  15.0     99.75     99.83   99.67  99.75\n",
+              "16  16.0     99.76     99.83   99.68  99.76\n",
+              "17  17.0     99.75     99.82   99.67  99.75\n",
+              "18  18.0     99.74     99.82   99.67  99.74\n",
+              "19  19.0     99.75     99.83   99.68  99.75\n",
+              "20  20.0     99.74     99.82   99.67  99.74"
             ],
             "text/html": [
               "\n",
               "\n",
-              "  <div id=\"df-3559245b-0b4b-419d-b94c-b317cef1af29\">\n",
+              "  <div id=\"df-0e01a26d-0b68-4c37-91f7-8d7a9bd667b1\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -832,167 +832,167 @@
               "    <tr>\n",
               "      <th>1</th>\n",
               "      <td>1.0</td>\n",
-              "      <td>95.878690</td>\n",
-              "      <td>98.171994</td>\n",
-              "      <td>93.498360</td>\n",
-              "      <td>95.778197</td>\n",
+              "      <td>95.88</td>\n",
+              "      <td>98.17</td>\n",
+              "      <td>93.49</td>\n",
+              "      <td>95.77</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
               "      <td>2.0</td>\n",
-              "      <td>99.255111</td>\n",
-              "      <td>99.515976</td>\n",
-              "      <td>98.991696</td>\n",
-              "      <td>99.253144</td>\n",
+              "      <td>99.25</td>\n",
+              "      <td>99.51</td>\n",
+              "      <td>98.99</td>\n",
+              "      <td>99.25</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
               "      <td>3.0</td>\n",
-              "      <td>99.497593</td>\n",
-              "      <td>99.636135</td>\n",
-              "      <td>99.358035</td>\n",
-              "      <td>99.496891</td>\n",
+              "      <td>99.49</td>\n",
+              "      <td>99.63</td>\n",
+              "      <td>99.35</td>\n",
+              "      <td>99.49</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
               "      <td>4.0</td>\n",
-              "      <td>99.645000</td>\n",
-              "      <td>99.701357</td>\n",
-              "      <td>99.588305</td>\n",
-              "      <td>99.644799</td>\n",
+              "      <td>99.66</td>\n",
+              "      <td>99.72</td>\n",
+              "      <td>99.59</td>\n",
+              "      <td>99.66</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>5</th>\n",
               "      <td>5.0</td>\n",
-              "      <td>99.690357</td>\n",
-              "      <td>99.732868</td>\n",
-              "      <td>99.647617</td>\n",
-              "      <td>99.690224</td>\n",
+              "      <td>99.70</td>\n",
+              "      <td>99.74</td>\n",
+              "      <td>99.65</td>\n",
+              "      <td>99.70</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>6</th>\n",
               "      <td>6.0</td>\n",
-              "      <td>99.717396</td>\n",
-              "      <td>99.760799</td>\n",
-              "      <td>99.673784</td>\n",
-              "      <td>99.717273</td>\n",
+              "      <td>99.71</td>\n",
+              "      <td>99.75</td>\n",
+              "      <td>99.67</td>\n",
+              "      <td>99.71</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>7</th>\n",
               "      <td>7.0</td>\n",
-              "      <td>99.720013</td>\n",
-              "      <td>99.759074</td>\n",
-              "      <td>99.680762</td>\n",
-              "      <td>99.719903</td>\n",
+              "      <td>99.72</td>\n",
+              "      <td>99.76</td>\n",
+              "      <td>99.68</td>\n",
+              "      <td>99.72</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>8</th>\n",
               "      <td>8.0</td>\n",
-              "      <td>99.726118</td>\n",
-              "      <td>99.760841</td>\n",
-              "      <td>99.691229</td>\n",
-              "      <td>99.726023</td>\n",
+              "      <td>99.72</td>\n",
+              "      <td>99.75</td>\n",
+              "      <td>99.68</td>\n",
+              "      <td>99.72</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>9</th>\n",
               "      <td>9.0</td>\n",
-              "      <td>99.721757</td>\n",
-              "      <td>99.760820</td>\n",
-              "      <td>99.682506</td>\n",
-              "      <td>99.721648</td>\n",
+              "      <td>99.72</td>\n",
+              "      <td>99.76</td>\n",
+              "      <td>99.68</td>\n",
+              "      <td>99.72</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>10</th>\n",
               "      <td>10.0</td>\n",
-              "      <td>99.712162</td>\n",
-              "      <td>99.752086</td>\n",
-              "      <td>99.672040</td>\n",
-              "      <td>99.712047</td>\n",
+              "      <td>99.72</td>\n",
+              "      <td>99.75</td>\n",
+              "      <td>99.69</td>\n",
+              "      <td>99.72</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>11</th>\n",
               "      <td>11.0</td>\n",
-              "      <td>99.725246</td>\n",
-              "      <td>99.767787</td>\n",
-              "      <td>99.682506</td>\n",
-              "      <td>99.725128</td>\n",
+              "      <td>99.73</td>\n",
+              "      <td>99.76</td>\n",
+              "      <td>99.69</td>\n",
+              "      <td>99.73</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>12</th>\n",
               "      <td>12.0</td>\n",
-              "      <td>99.730479</td>\n",
-              "      <td>99.776501</td>\n",
-              "      <td>99.684251</td>\n",
-              "      <td>99.730355</td>\n",
+              "      <td>99.74</td>\n",
+              "      <td>99.78</td>\n",
+              "      <td>99.69</td>\n",
+              "      <td>99.74</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>13</th>\n",
               "      <td>13.0</td>\n",
-              "      <td>99.737457</td>\n",
-              "      <td>99.799137</td>\n",
-              "      <td>99.675529</td>\n",
-              "      <td>99.737295</td>\n",
+              "      <td>99.74</td>\n",
+              "      <td>99.81</td>\n",
+              "      <td>99.67</td>\n",
+              "      <td>99.74</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>14</th>\n",
               "      <td>14.0</td>\n",
-              "      <td>99.740074</td>\n",
-              "      <td>99.799148</td>\n",
-              "      <td>99.680762</td>\n",
-              "      <td>99.739920</td>\n",
+              "      <td>99.74</td>\n",
+              "      <td>99.80</td>\n",
+              "      <td>99.68</td>\n",
+              "      <td>99.74</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>15</th>\n",
               "      <td>15.0</td>\n",
-              "      <td>99.745307</td>\n",
-              "      <td>99.820050</td>\n",
-              "      <td>99.670295</td>\n",
-              "      <td>99.745116</td>\n",
+              "      <td>99.75</td>\n",
+              "      <td>99.83</td>\n",
+              "      <td>99.67</td>\n",
+              "      <td>99.75</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>16</th>\n",
               "      <td>16.0</td>\n",
-              "      <td>99.747924</td>\n",
-              "      <td>99.811357</td>\n",
-              "      <td>99.684251</td>\n",
-              "      <td>99.747763</td>\n",
+              "      <td>99.76</td>\n",
+              "      <td>99.83</td>\n",
+              "      <td>99.68</td>\n",
+              "      <td>99.76</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>17</th>\n",
               "      <td>17.0</td>\n",
-              "      <td>99.744435</td>\n",
-              "      <td>99.821787</td>\n",
-              "      <td>99.666806</td>\n",
-              "      <td>99.744237</td>\n",
+              "      <td>99.75</td>\n",
+              "      <td>99.82</td>\n",
+              "      <td>99.67</td>\n",
+              "      <td>99.75</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>18</th>\n",
               "      <td>18.0</td>\n",
-              "      <td>99.735713</td>\n",
-              "      <td>99.795651</td>\n",
-              "      <td>99.675529</td>\n",
-              "      <td>99.735554</td>\n",
+              "      <td>99.74</td>\n",
+              "      <td>99.82</td>\n",
+              "      <td>99.67</td>\n",
+              "      <td>99.74</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>19</th>\n",
               "      <td>19.0</td>\n",
-              "      <td>99.747924</td>\n",
-              "      <td>99.821800</td>\n",
-              "      <td>99.673784</td>\n",
-              "      <td>99.747737</td>\n",
+              "      <td>99.75</td>\n",
+              "      <td>99.83</td>\n",
+              "      <td>99.68</td>\n",
+              "      <td>99.75</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>20</th>\n",
               "      <td>20.0</td>\n",
-              "      <td>99.754030</td>\n",
-              "      <td>99.837492</td>\n",
-              "      <td>99.670295</td>\n",
-              "      <td>99.753824</td>\n",
+              "      <td>99.74</td>\n",
+              "      <td>99.82</td>\n",
+              "      <td>99.67</td>\n",
+              "      <td>99.74</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-3559245b-0b4b-419d-b94c-b317cef1af29')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-0e01a26d-0b68-4c37-91f7-8d7a9bd667b1')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "\n",
@@ -1005,8 +1005,8 @@
               "\n",
               "\n",
               "\n",
-              "    <div id=\"df-a99317a3-2939-4c48-8984-ccfe5997b044\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-a99317a3-2939-4c48-8984-ccfe5997b044')\"\n",
+              "    <div id=\"df-c432984d-2cf8-4ac9-8e30-4b924164e00c\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-c432984d-2cf8-4ac9-8e30-4b924164e00c')\"\n",
               "              title=\"Suggest charts.\"\n",
               "              style=\"display:none;\">\n",
               "\n",
@@ -1063,7 +1063,7 @@
               "\n",
               "function displayQuickchartButton(domScope) {\n",
               "  let quickchartButtonEl =\n",
-              "    domScope.querySelector('#df-a99317a3-2939-4c48-8984-ccfe5997b044 button.colab-df-quickchart');\n",
+              "    domScope.querySelector('#df-c432984d-2cf8-4ac9-8e30-4b924164e00c button.colab-df-quickchart');\n",
               "  quickchartButtonEl.style.display =\n",
               "    google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "}\n",
@@ -1110,12 +1110,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-3559245b-0b4b-419d-b94c-b317cef1af29 button.colab-df-convert');\n",
+              "          document.querySelector('#df-0e01a26d-0b68-4c37-91f7-8d7a9bd667b1 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-3559245b-0b4b-419d-b94c-b317cef1af29');\n",
+              "          const element = document.querySelector('#df-0e01a26d-0b68-4c37-91f7-8d7a9bd667b1');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -1137,7 +1137,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 32
+          "execution_count": 34
         }
       ]
     },
@@ -1168,11 +1168,11 @@
       ],
       "metadata": {
         "id": "AmY-niaa9PVY",
-        "outputId": "33ba73ec-0704-4fb2-f51b-55d169151005",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 179
-        }
+        },
+        "outputId": "33ba73ec-0704-4fb2-f51b-55d169151005"
       },
       "execution_count": 19,
       "outputs": [
