--- a/6_melhorando_modelo_rf.ipynb
+++ b/6_melhorando_modelo_rf.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOUdqPnFpxcCNHp0hNrabda",
+      "authorship_tag": "ABX9TyMm4WOhNkil4DqKclolbjPY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -725,7 +725,7 @@
       "metadata": {
         "id": "xzoXBa8hlPDX"
       },
-      "execution_count": 27,
+      "execution_count": 35,
       "outputs": []
     },
     {
@@ -1164,41 +1164,10 @@
     {
       "cell_type": "code",
       "source": [
-        "selecionador_rfe = RFE(estimator = classificador, n_features_to_select = 5, step = 1)"
+        "df_rfe = pd.DataFrame(columns=['K', 'Acurácia', 'Precisão', 'Recall', 'F1'])"
       ],
       "metadata": {
-        "id": "AmY-niaa9PVY",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 179
-        },
-        "outputId": "33ba73ec-0704-4fb2-f51b-55d169151005"
-      },
-      "execution_count": 19,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-19-3729efc7e550>\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mselecionador_rfe\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mRFE\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mestimator\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mclassificador\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mn_features_to_select\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m5\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstep\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m: name 'classificador' is not defined"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "selecionador_rfe.fit(treino_x, treino_y)\n",
-        "treino_rfe = selecionador_rfe.transform(treino_x)\n",
-        "teste_rfe = selecionador_rfe.transform(teste_x)\n",
-        "classificador.fit(treino_rfe, treino_y)"
-      ],
-      "metadata": {
-        "id": "K3eB49WF9PYG"
+        "id": "AmY-niaa9PVY"
       },
       "execution_count": null,
       "outputs": []
@@ -1206,12 +1175,28 @@
     {
       "cell_type": "code",
       "source": [
-        "matriz_confusao = confusion_matrix(teste_y, classificador.predict(teste_rfe))\n",
-        "sns.heatmap(matriz_confusao, annot = True, fmt = \"d\").set(xlabel = \"Predição\", ylabel = \"Real\")\n",
-        "print(\"Resultado da classificação %.2f%%\" % (classificador.score(teste_rfe, teste_y)* 100))"
+        "count = 1\n",
+        "for count in range(1, X_raw.shape[1]):\n",
+        "  selecionador_rfe = RFE(estimator = modelo_rfc, n_features_to_select = count, step = 1)\n",
+        "  selecionador_rfe.fit(X_treino, y_treino)\n",
+        "\n",
+        "  X_treino_rfe = selecionador_rfe.transform(X_treino)\n",
+        "  y_treino_rfe = selecionador_rfe.transform(y_treino)\n",
+        "\n",
+        "  modelo_rfe = RandomForestClassifier(n_estimators = 100)\n",
+        "  modelo_rfe.fit(X_treino_rfe, y_treino_rfe)\n",
+        "  predito_rfe = modelo_kb.predict(X_teste_kbest)\n",
+        "\n",
+        "  metricas = [count,\n",
+        "              round((metrics.accuracy_score(y_teste, predito_kb) * 100), 2),\n",
+        "              round((metrics.precision_score(y_teste, predito_kb) * 100), 2),\n",
+        "              round((metrics.recall_score(y_teste, predito_kb) * 100), 2),\n",
+        "              round((metrics.f1_score(y_teste, predito_kb) * 100), 2)]\n",
+        "\n",
+        "  df_kbest.loc[count] = metricas"
       ],
       "metadata": {
-        "id": "IvpMnebK9PbO"
+        "id": "ZYd8-PF-96wa"
       },
       "execution_count": null,
       "outputs": []
