feat: Random Forest Cross Validate

--- a/5_modelagem-classificacao_1.ipynb
+++ b/5_modelagem-classificacao_1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNoeLNk62C9rJdloH6woR07",
+      "authorship_tag": "ABX9TyMqB5Y4IsLBBLR5ni3IC6BR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1023,11 +1023,11 @@
         "    print(\"A Acurácia do modelo {} com Cross Validation foi  [{:.2f}%, {:.2f}%]\".format(_nome_modelo, ini, fim))"
       ],
       "metadata": {
-        "id": "2q3UR7NS9yX0",
-        "outputId": "5f526ec5-0dfa-4fcc-dfe4-7be5895a438b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "2q3UR7NS9yX0",
+        "outputId": "5f526ec5-0dfa-4fcc-dfe4-7be5895a438b"
       },
       "execution_count": 41,
       "outputs": [
@@ -1488,11 +1488,11 @@
         "from sklearn.model_selection import KFold"
       ],
       "metadata": {
-        "id": "kNTdslZv_XPg",
-        "outputId": "fce03bfc-14e6-4612-a177-0c5225d8e5fd",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "kNTdslZv_XPg",
+        "outputId": "fce03bfc-14e6-4612-a177-0c5225d8e5fd"
       },
       "execution_count": 30,
       "outputs": [
@@ -1516,11 +1516,11 @@
         "print()"
       ],
       "metadata": {
-        "id": "sHrwx1s8-0dl",
-        "outputId": "6a67d08a-432d-4c87-b1e0-b72ccf997ee6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "sHrwx1s8-0dl",
+        "outputId": "6a67d08a-432d-4c87-b1e0-b72ccf997ee6"
       },
       "execution_count": 46,
       "outputs": [
@@ -1564,15 +1564,15 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "51b406d7-7ccf-46d2-f4a8-9d12ea18f42e"
+        "outputId": "c110d239-34ae-49db-e0ea-f191ec3cd231"
       },
-      "execution_count": null,
+      "execution_count": 48,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "time: 459 µs (started: 2023-08-24 15:45:35 +00:00)\n"
+            "time: 523 µs (started: 2023-08-24 19:44:31 +00:00)\n"
           ]
         }
       ]
@@ -1584,26 +1584,68 @@
         "modelo_rfc.fit(X_treino, y_treino)\n",
         "predito_rfc = modelo_rfc.predict(X_teste)\n",
         "\n",
-        "imprimir_metricas('Random Forest', predito_rfc)"
+        "imprimir_metricas('Random Forest', predito_rfc)\n",
+        "print()"
       ],
       "metadata": {
         "id": "h9CkJBzHDnwh",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "dce7a892-3f94-4548-99a3-5ee244915e2d"
+        "outputId": "dfad9bda-fbb8-4433-fe70-73bf8c61a46c"
       },
-      "execution_count": null,
+      "execution_count": 50,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "A Acurácia do momelo Random Forest foi 99.74%\n",
-            "A Precisão do momelo Random Forest foi 99.81%\n",
-            "A Recall do momelo Random Forest foi 99.67%\n",
-            "A F1 do momelo Random Forest foi 99.74%\n",
-            "time: 42.6 s (started: 2023-08-24 15:45:35 +00:00)\n"
+            "A Acurácia do modelo Random Forest foi 99.74%\n",
+            "A Precisão do modelo Random Forest foi 99.81%\n",
+            "A Recall do modelo Random Forest foi 99.66%\n",
+            "A F1 do modelo Random Forest foi 99.74%\n",
+            "\n",
+            "time: 42.3 s (started: 2023-08-24 19:50:58 +00:00)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### <font style='font-size: 30px;'>Random Forest Cross Validate</font>\n",
+        "<hr style='border: 2px solid red;'>"
+      ],
+      "metadata": {
+        "id": "TwtQ4zkfEcDB"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "cv_rf = KFold(n_splits = 10, shuffle=True)\n",
+        "modelo_rf_cv = RandomForestClassifier(n_estimators = 100)\n",
+        "results = cross_validate(modelo_rf_cv, X_treino, y_treino, cv = cv_rf, return_train_score=False)\n",
+        "\n",
+        "imprime_metrica_cv('Random Forest', results)\n",
+        "print()"
+      ],
+      "metadata": {
+        "id": "oavfoDfoEgog",
+        "outputId": "56f70d73-4efd-43b5-858e-03697757d40a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 49,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "A Acurácia do modelo Random Forest com Cross Validation foi  [99.65%, 99.82%]\n",
+            "\n",
+            "time: 6min 21s (started: 2023-08-24 19:44:35 +00:00)\n"
           ]
         }
       ]
