--- a/5_modelagem-classificacao_1.ipynb
+++ b/5_modelagem-classificacao_1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMqB5Y4IsLBBLR5ni3IC6BR",
+      "authorship_tag": "ABX9TyPtQu/8AdQJ37N2YQMVvYco",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1485,22 +1485,22 @@
       "cell_type": "code",
       "source": [
         "from sklearn.model_selection import cross_validate\n",
-        "from sklearn.model_selection import KFold"
+        "from sklearn.model_selection import StratifiedKFold"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "kNTdslZv_XPg",
-        "outputId": "fce03bfc-14e6-4612-a177-0c5225d8e5fd"
+        "outputId": "dc146c3d-39a9-4085-d55b-895f48f4d3c0"
       },
-      "execution_count": 30,
+      "execution_count": 51,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "time: 1.06 ms (started: 2023-08-24 19:23:18 +00:00)\n"
+            "time: 657 µs (started: 2023-08-24 20:07:05 +00:00)\n"
           ]
         }
       ]
@@ -1508,7 +1508,7 @@
     {
       "cell_type": "code",
       "source": [
-        "cv = KFold(n_splits = 10, shuffle=True)\n",
+        "cv = StratifiedKFold(n_splits = 10, shuffle=True)\n",
         "modelo_dtc_cv = DecisionTreeClassifier()\n",
         "results = cross_validate(modelo_dtc_cv, X_treino, y_treino, cv = cv, return_train_score=False)\n",
         "\n",
@@ -1520,17 +1520,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "sHrwx1s8-0dl",
-        "outputId": "6a67d08a-432d-4c87-b1e0-b72ccf997ee6"
+        "outputId": "901a2bdf-dde5-46ee-ac73-eee6b24c523e"
       },
-      "execution_count": 46,
+      "execution_count": 52,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "A Acurácia do modelo Decision Tree com Cross Validation foi  [99.45%, 99.57%]\n",
+            "A Acurácia do modelo Decision Tree com Cross Validation foi  [99.46%, 99.58%]\n",
             "\n",
-            "time: 25.7 s (started: 2023-08-24 19:31:27 +00:00)\n"
+            "time: 29.6 s (started: 2023-08-24 20:07:09 +00:00)\n"
           ]
         }
       ]
@@ -1623,7 +1623,7 @@
     {
       "cell_type": "code",
       "source": [
-        "cv_rf = KFold(n_splits = 10, shuffle=True)\n",
+        "cv_rf = StratifiedKFold(n_splits = 10, shuffle=True)\n",
         "modelo_rf_cv = RandomForestClassifier(n_estimators = 100)\n",
         "results = cross_validate(modelo_rf_cv, X_treino, y_treino, cv = cv_rf, return_train_score=False)\n",
         "\n",
@@ -1631,21 +1631,21 @@
         "print()"
       ],
       "metadata": {
-        "id": "oavfoDfoEgog",
-        "outputId": "56f70d73-4efd-43b5-858e-03697757d40a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "oavfoDfoEgog",
+        "outputId": "a9064dae-8bfa-4e61-f5b5-d6fbb366ce6c"
       },
-      "execution_count": 49,
+      "execution_count": 53,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "A Acurácia do modelo Random Forest com Cross Validation foi  [99.65%, 99.82%]\n",
+            "A Acurácia do modelo Random Forest com Cross Validation foi  [99.69%, 99.80%]\n",
             "\n",
-            "time: 6min 21s (started: 2023-08-24 19:44:35 +00:00)\n"
+            "time: 6min 9s (started: 2023-08-24 20:07:59 +00:00)\n"
           ]
         }
       ]
