--- a/3_limpeza-tratamento_dos_dados.ipynb
+++ b/3_limpeza-tratamento_dos_dados.ipynb
@@ -16,7 +16,7 @@
         "wlSKNuFWBx3M",
         "HTkElvkaHoU4"
       ],
-      "authorship_tag": "ABX9TyOurX0OMtVJDfe4T6xnk23M",
+      "authorship_tag": "ABX9TyNbWIfq6UNCKoiZMOYMCfKq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1272,7 +1272,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### <font color=red>6 - Idade da mãe</font>"
+        "### 6 - Idade da mãe"
       ],
       "metadata": {
         "id": "KWIv83g4Oh31"
@@ -1281,7 +1281,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Removido devido Tabela 1."
+        "Removido devido Tabela 1 (SILVA, 2022)."
       ],
       "metadata": {
         "id": "YXbSiBe2O3Re"
@@ -1302,7 +1302,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "###<font color=red>7) Idade do pai</font>"
+        "###7) Idade do pai"
       ],
       "metadata": {
         "id": "28gqeaVhTfwC"
@@ -1311,7 +1311,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Removido devido Tabela 6\n",
+        "# Removido devido Tabela 6  (SILVA, 2022)\n",
         "# pdf 33\n",
         "dados.drop(columns=['IDADEPAI'], inplace = True)"
       ],
@@ -1333,6 +1333,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Equivalente ao pandas.get_dummies\n",
         "dados['LOCNASC'].replace('Ignorado', None, inplace=True)\n",
         "dados.dropna(subset=['LOCNASC'], inplace=True)\n",
         "dados['LOCNASC_DOMICILIO'] = dados['LOCNASC'].apply(lambda x: 1 if (x != None and str(x).__eq__('Domicilio')) else 0)\n",
@@ -1359,11 +1360,10 @@
     {
       "cell_type": "code",
       "source": [
-        "#print(dados['QTDFILVIVO'].value_counts(dropna=False))\n",
+        "# Removido devido Tabela 6  (SILVA, 2022)\n",
         "print('Quantidade NaN: {}'.format(dados['QTDFILVIVO'].isnull().sum()))\n",
         "print('Percentual NaN: {}'.format(dados['QTDFILVIVO'].isnull().sum()/dados.shape[0]*100))\n",
-        "#dados['QTDFILVIVO'] = dados['QTDFILVIVO'].apply(lambda x: x if (x != None) else randrange(2))\n",
-        "#print(dados['QTDFILVIVO'].value_counts(dropna=False))\n",
+        "\n",
         "dados.drop(columns=['QTDFILVIVO'], inplace=True)"
       ],
       "metadata": {
@@ -1479,7 +1479,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### <font color=red>11) Gestações anteriores </font>"
+        "### 11) Gestações anteriores"
       ],
       "metadata": {
         "id": "yx3c11HjTC7k"
@@ -1488,7 +1488,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Removido devido a Tabela 6\n",
+        "# Removido devido a Tabela 6 (SILVA, 2022)\n",
         "# Pdf 33\n",
         "dados.drop(columns=['QTDGESTANT'], inplace = True)"
       ],
@@ -1501,10 +1501,49 @@
     {
       "cell_type": "markdown",
       "source": [
+        "### 12) Número de partos cesáreos"
+      ],
+      "metadata": {
+        "id": "PGfQ6IIOHoNx"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 13) Número de partos vaginais"
+      ],
+      "metadata": {
+        "id": "zSAhJJCiJDMl"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Removido devido a Tabela 6 (SILVA, 2022)\n",
+        "dados.drop(columns=['QTDPARTNOR'], inplace=True)"
+      ],
+      "metadata": {
+        "id": "eloxYkfdJFO_"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "###<font color=red>14) Número de perdas fetais e abortos</font>"
       ],
       "metadata": {
         "id": "mqAcFMusYSMY"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Os dados NaN equivalem a 20% do total de resgistros, tais dados foram substitudos por 0."
+      ],
+      "metadata": {
+        "id": "WgiSfEZKyMVX"
       }
     },
     {
@@ -1562,10 +1601,28 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#### <font color=red>7 - Número de semanas de gestação</font>"
+        "### <font color=blue>15 - Óbito Neo Natal </font>"
+      ],
+      "metadata": {
+        "id": "DJ1Oj6JxJ6Wr"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "####16 - Número de semanas de gestação"
       ],
       "metadata": {
         "id": "y2BSjBoh1TS1"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Existem dois campos relacionados ao número de semanas de gestação. Será feito o merge em SEMAGESTAC e o campo GESTACAO será excluído."
+      ],
+      "metadata": {
+        "id": "BVHwPsbB6K5z"
       }
     },
     {
@@ -1674,15 +1731,6 @@
       "outputs": []
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "### 12) Número de partos cesáreos"
-      ],
-      "metadata": {
-        "id": "FMwlL762MQma"
-      }
-    },
-    {
       "cell_type": "code",
       "source": [
         "#dados.drop(columns=['QTDPARTCES'], inplace=True)"
@@ -1692,35 +1740,6 @@
       },
       "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "### 13) Número de partos vaginais"
-      ],
-      "metadata": {
-        "id": "QwE-JjvqN8wb"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "dados.drop(columns=['QTDPARTNOR'], inplace=True)"
-      ],
-      "metadata": {
-        "id": "wBISg4cfN98y"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "### <font color=blue>15 - Óbito Neo Natal </font>"
-      ],
-      "metadata": {
-        "id": "0cuQPiAM8l_-"
-      }
     },
     {
       "cell_type": "markdown",
@@ -1761,6 +1780,15 @@
           "execution_count": 34
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 17- Peso ao nascer em gramas"
+      ],
+      "metadata": {
+        "id": "sxgZfXWiKK38"
+      }
     },
     {
       "cell_type": "markdown",
@@ -2659,6 +2687,33 @@
       ],
       "metadata": {
         "id": "6rOpgSjMpsaN"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Referências"
+      ],
+      "metadata": {
+        "id": "vnzKZ_8gva1J"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "SILVA, T. S. L. de B. Fatores de risco ao nascer relacionados ao lóbito neonatal precoce e ao near miss neonatal: estudo de linkage entre o SINASC e o SIM. Dissertação (Dissertação de Doutorado) — Universidade Federal de Sergipe, 2022"
+      ],
+      "metadata": {
+        "id": "1Yx3cWc7vfNX"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "wBZJqpwIvjOo"
       },
       "execution_count": null,
       "outputs": []
